--- a/pages/not-found.html
+++ b/pages/not-found.html
@@ -27,7 +27,6 @@
           <li>
             <a href="./about.html">პროექტის შესახებ</a>
           </li>
-
         </ul>
       </nav>
     </header>
@@ -41,24 +40,35 @@
           </div>
         </div>
         <h2>გვერდი ვერ მოიძებნა</h2>
-        <div class="main-page-route">
-          <i class="fa-solid fa-arrow-right"></i>
-          <a href="../index.html">მთავარი გვერდი</a>
-        </div>
+        <button
+          onclick="location.href='authorization.html'"
+          type="button"
+          class="homePage"
+          id="homePageBtn"
+        >
+          მთავარი გვერდი
+        </button>
       </div>
     </section>
     <footer>
       <!-- Copyright -->
       <div class="copyRightDiv">
         <div class="copyRightLink">
-          <a href="" class="privacy">კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a>
+          <a href="" class="privacy"
+            >კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a
+          >
         </div>
         <div>
           <div class="contactList">
             <p class="contact">კონტაქტი</p>
-            <p class="contactEmail"> <a href = "mailto: unilabinfo@iliauni.edu.ge" >unilabinfo@iliauni.edu.ge</a></p>
-            <p class="contactEmail"> <a href="https://www.facebook.com/"> Facebook</a></p> 
-
+            <p class="contactEmail">
+              <a href="mailto: unilabinfo@iliauni.edu.ge"
+                >unilabinfo@iliauni.edu.ge</a
+              >
+            </p>
+            <p class="contactEmail">
+              <a href="https://www.facebook.com/"> Facebook</a>
+            </p>
           </div>
         </div>
       </div>
@@ -68,6 +78,5 @@
     </footer>
     <script src="../js/navigation.js"></script>
     <script src="../js/app.js"></script>
-    <script src="../js/api.js"></script>
   </body>
 </html>
