--- a/index.html
+++ b/index.html
@@ -536,14 +536,21 @@
       <!-- Copyright -->
       <div class="copyRightDiv">
         <div class="copyRightLink">
-          <a href="" class="privacy">კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a>
+          <a href="./pages/privacyPolicy.html" class="privacy"
+            >კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a
+          >
         </div>
         <div>
           <div class="contactList">
             <p class="contact">კონტაქტი</p>
-            <p class="contactEmail"> <a href = "mailto: unilabinfo@iliauni.edu.ge" >unilabinfo@iliauni.edu.ge</a></p>
-            <p class="contactEmail"> <a href="https://www.facebook.com/"> Facebook</a></p> 
-
+            <p class="contactEmail">
+              <a href="mailto: unilabinfo@iliauni.edu.ge"
+                >unilabinfo@iliauni.edu.ge</a
+              >
+            </p>
+            <p class="contactEmail">
+              <a href="https://www.facebook.com/"> Facebook</a>
+            </p>
           </div>
         </div>
       </div>
@@ -551,7 +558,7 @@
         <p>copyright</p>
       </div>
     </footer>
-    <script src="./js/home.js"></script> 
+    <script src="./js/home.js"></script>
 
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
   </body>
