--- a/pages/myProfile.html
+++ b/pages/myProfile.html
@@ -179,7 +179,9 @@
                 id="my-profile-agree-policies"
                 name="agreement"
                 checked
-              /><label for="agreement"
+              /><label
+                onclick="location.href='./privacyPolicy.html'"
+                for="agreement"
                 >ვეთანხმები <span>მონაცემების დამუშავებას</span></label
               >
             </div>
@@ -260,7 +262,7 @@
       <!-- Copyright -->
       <div class="copyRightDiv">
         <div class="copyRightLink">
-          <a href="" class="privacy"
+          <a href="./privacyPolicy.html" class="privacy"
             >კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a
           >
         </div>
