--- a/pages/not-found.html
+++ b/pages/not-found.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Project</title>
+    <title>Not Found</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -54,7 +54,7 @@
       <!-- Copyright -->
       <div class="copyRightDiv">
         <div class="copyRightLink">
-          <a href="" class="privacy"
+          <a href="./privacyPolicy.html" class="privacy"
             >კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a
           >
         </div>
