--- a/pages/about.html
+++ b/pages/about.html
@@ -173,7 +173,7 @@
       <!-- Copyright -->
       <div class="copyRightDiv">
         <div class="copyRightLink">
-          <a href="" class="privacy"
+          <a href="./privacyPolicy.html" class="privacy"
             >კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a
           >
         </div>
