--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -11,8 +11,8 @@
       integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    /> 
-    <link rel="stylesheet" href="../css/global.css"/>
+    />
+    <link rel="stylesheet" href="../css/global.css" />
   </head>
   <body class="about-body">
     <header>
@@ -54,13 +54,21 @@
       <!-- Copyright -->
       <div class="copyRightDiv">
         <div class="copyRightLink">
-          <a href="" class="privacy">კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a>
+          <a href="./privacyPolicy.html" class="privacy"
+            >კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a
+          >
         </div>
         <div>
           <div class="contactList">
             <p class="contact">კონტაქტი</p>
-            <p class="contactEmail"> <a href = "mailto: unilabinfo@iliauni.edu.ge" >unilabinfo@iliauni.edu.ge</a></p>
-            <p class="contactEmail"> <a href="https://www.facebook.com/"> Facebook</a></p>
+            <p class="contactEmail">
+              <a href="mailto: unilabinfo@iliauni.edu.ge"
+                >unilabinfo@iliauni.edu.ge</a
+              >
+            </p>
+            <p class="contactEmail">
+              <a href="https://www.facebook.com/"> Facebook</a>
+            </p>
           </div>
         </div>
       </div>
