--- a/pages/registration.html
+++ b/pages/registration.html
@@ -177,7 +177,9 @@
                 id="agree-policies"
                 name="agreement"
                 checked
-              /><label for="agreement"
+              /><label
+                onclick="location.href='./privacyPolicy.html'"
+                for="agreement"
                 >ვეთანხმები კონფიდენციალურობის პოლიტიკას და გამოყენების
                 პირობებებს</label
               >
@@ -206,7 +208,7 @@
       <!-- Copyright -->
       <div class="copyRightDiv">
         <div class="copyRightLink">
-          <a href="" class="privacy"
+          <a href="./privacyPolicy.html" class="privacy"
             >კონფიდენციალურობის პოლიტიკა და გამოყენების პირობები</a
           >
         </div>
