Bugfix/Icons-checkbox-responsive

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="content-container circle-container">
               <div id="circle_1" onclick="addCircleFilter(this)" class="item">
                 <div class="circle"></div>
-                <p>ფიგურები</p>
+                <p>გეომეტრიული პროგრესია</p>
               </div>
               <div id="circle_2" onclick="addCircleFilter(this)" class="item">
                 <div class="circle"></div>
