--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -67,7 +67,7 @@
               >
             </p>
             <p class="contactEmail">
-              <a href="https://www.facebook.com/"> Facebook</a>
+              <a href="https://www.facebook.com/" target="_blank"> Facebook</a>
             </p>
           </div>
         </div>
