--- a/pages/about.html
+++ b/pages/about.html
@@ -186,7 +186,7 @@
               >
             </p>
             <p class="contactEmail">
-              <a href="https://www.facebook.com/"> Facebook</a>
+              <a href="https://www.facebook.com/" target="_blank"> Facebook</a>
             </p>
           </div>
         </div>
