--- a/pages/authorization.html
+++ b/pages/authorization.html
@@ -160,7 +160,7 @@
               >
             </p>
             <p class="contactEmail">
-              <a href="https://www.facebook.com/"> Facebook</a>
+              <a href="https://www.facebook.com/" target="_blank"> Facebook</a>
             </p>
           </div>
         </div>
