Adding validations to all inputs

--- a/pages/myProfile.html
+++ b/pages/myProfile.html
@@ -50,6 +50,7 @@
         <form action="submit" class="my-profile-form" id="my-profile-form">
           <div class="msg-wrapper">
             <label for="pass">სახელი</label>
+            <div class="email-msg sb4">ამ ველის შეყვანა აუცილებელია</div>
           </div>
           <div>
             <div class="input-icons">
@@ -59,10 +60,15 @@
                 name="first_name"
                 class="input"
               />
+              <div>
+                <i class="fas fa-exclamation-circle failure-icon"></i>
+                <i class="far fa-check-circle success-icon"></i>
+              </div>
             </div>
           </div>
           <div class="msg-wrapper">
             <label for="pass">გვარი</label>
+            <div class="email-msg sb4">ამ ველის შეყვანა აუცილებელია</div>
           </div>
           <div>
             <div class="input-icons">
@@ -72,15 +78,20 @@
                 name="last_name"
                 class="input"
               />
+              <div>
+                <i class="fas fa-exclamation-circle failure-icon"></i>
+                <i class="far fa-check-circle success-icon"></i>
+              </div>
             </div>
           </div>
           <div class="msg-wrapper">
             <label for="pass">რეგიონი</label>
+            <div class="email-msg sb4">ამ ველის შეყვანა აუცილებელია</div>
           </div>
           <!-- Custom select structure -->
           <div class="customSelect selectVisual">
             <div class="select-menu">
-              <div class="select menuVisual">
+              <div class="select menuVisual menuVisual-one">
                 <span></span>
                 <i class="fas fa-angle-down"></i>
               </div>
@@ -97,11 +108,26 @@
                 <div class="option">სვანეთი</div>
                 <div class="option">აფხაზეთი</div>
               </div>
+              <div>
+                <i
+                  class="fas fa-exclamation-circle failure-icon"
+                  style="position: absolute; right: -152px; top: 18px"
+                ></i>
+                <i
+                  class="far fa-check-circle success-icon"
+                  style="
+                    position: absolute;
+                    right: -22px;
+                    transform: translateY(15px);
+                  "
+                ></i>
+              </div>
             </div>
           </div>
           <!-- Custom select structure -->
           <div class="msg-wrapper">
             <label for="pass">სკოლა</label>
+            <div class="email-msg sb4">ამ ველის შეყვანა აუცილებელია</div>
           </div>
           <div>
             <div class="input-icons">
@@ -111,16 +137,21 @@
                 name="school"
                 class="input"
               />
+              <div>
+                <i class="fas fa-exclamation-circle failure-icon"></i>
+                <i class="far fa-check-circle success-icon"></i>
+              </div>
             </div>
           </div>
           <div class="msg-wrapper">
             <label for="pass">კლასი</label>
+            <div class="email-msg sb4">ამ ველის შეყვანა აუცილებელია</div>
           </div>
 
           <!-- Custom select structure -->
           <div class="customSelect selectVisual">
             <div class="select-menu">
-              <div class="select2 menuVisual">
+              <div class="select2 menuVisual menuVisual-two">
                 <span></span>
                 <i class="fas fa-angle-down"></i>
               </div>
@@ -139,10 +170,25 @@
                 <div class="option2">XI</div>
                 <div class="option2">XII</div>
               </div>
+              <div>
+                <i
+                  class="fas fa-exclamation-circle failure-icon"
+                  style="position: absolute; right: -152px; top: 18px"
+                ></i>
+                <i
+                  class="far fa-check-circle success-icon"
+                  style="
+                    position: absolute;
+                    right: -22px;
+                    transform: translateY(15px);
+                  "
+                ></i>
+              </div>
             </div>
           </div>
           <div class="msg-wrapper">
             <label for="pass">ი-მეილი</label>
+            <div class="email-msg sb4">ამ ველის შეყვანა აუცილებელია</div>
           </div>
           <div>
             <div class="input-icons">
@@ -152,10 +198,15 @@
                 class="input"
                 id="my-profile-register_email"
               />
+              <div>
+                <i class="fas fa-exclamation-circle failure-icon"></i>
+                <i class="far fa-check-circle success-icon"></i>
+              </div>
             </div>
           </div>
           <div class="msg-wrapper">
             <label for="pass">პაროლი</label>
+            <div class="email-msg sb4">ამ ველის შეყვანა აუცილებელია</div>
           </div>
           <div class="input-icons">
             <input
@@ -171,6 +222,10 @@
               class="eyeBtn far fa-eye"
               onclick="showPassword(`password`,this)"
             ></i>
+            <div>
+              <i class="fas fa-exclamation-circle failure-icon"></i>
+              <i class="far fa-check-circle success-icon"></i>
+            </div>
           </div>
           <div class="agree-policies-wrapper">
             <div class="policeDiv">
@@ -199,6 +254,7 @@
           <!-- current password -->
           <div class="msg-wrapper">
             <label for="pass">არსებული პაროლი</label>
+            <div class="email-msg sb4">სცადეთ სხვა პაროლი</div>
           </div>
           <div class="input-icons">
             <input
@@ -214,10 +270,15 @@
               class="eyeBtn far fa-eye"
               onclick="showPassword(`id_password`,this)"
             ></i>
+            <div>
+              <i class="fas fa-exclamation-circle failure-icon"></i>
+              <i class="far fa-check-circle success-icon"></i>
+            </div>
           </div>
           <!-- new Password -->
           <div class="msg-wrapper">
             <label for="pass">ახალი პაროლი</label>
+            <div class="email-msg sb4">სცადეთ სხვა პაროლი</div>
           </div>
           <div class="input-icons">
             <input
@@ -233,11 +294,16 @@
               class="eyeBtn far fa-eye"
               onclick="showPassword(`new_password`,this)"
             ></i>
+            <div>
+              <i class="fas fa-exclamation-circle failure-icon"></i>
+              <i class="far fa-check-circle success-icon"></i>
+            </div>
           </div>
 
           <!-- repeat new password -->
           <div class="msg-wrapper">
             <label for="pass">გაიმეორეთ პაროლი</label>
+            <div class="email-msg sb4">სცადეთ სხვა პაროლი</div>
           </div>
           <div class="input-icons">
             <input
@@ -253,6 +319,10 @@
               class="eyeBtn far fa-eye"
               onclick="showPassword(`repeat_new_pass`,this)"
             ></i>
+            <div>
+              <i class="fas fa-exclamation-circle failure-icon"></i>
+              <i class="far fa-check-circle success-icon"></i>
+            </div>
           </div>
           <div class="my-profile-buttons">
             <button type="button" id="cancel-buttons" class="cancel-button">
@@ -306,5 +376,6 @@
       </div>
     </footer>
     <script src="../js/myProfile.js"></script>
+    <script src="../js/validators/myProfileValidation.js"></script>
   </body>
 </html>
