--- a/pages/recoveryPassword.html
+++ b/pages/recoveryPassword.html
@@ -42,6 +42,7 @@
           <h3>პაროლის აღდგენა</h3>
           <div class="msg-wrapper">
             <label for="pass">ახალი პაროლი</label>
+            <div class="pass-msg sb4">სცადეთ სხვა პაროლი</div>
           </div>
           <div class="input-icons">
             <input
@@ -57,9 +58,14 @@
               class="eyeBtn far fa-eye"
               onclick="showPassword(`id_password`,this)"
             ></i>
+            <div>
+              <i class="fas fa-exclamation-circle failure-icon"></i>
+              <i class="far fa-check-circle success-icon"></i>
+            </div>
           </div>
           <div class="msg-wrapper">
             <label for="pass">გაიმეორეთ პაროლი</label>
+            <div class="pass-msg sb4">სცადეთ სხვა პაროლი</div>
           </div>
           <div class="input-icons">
             <input
@@ -75,6 +81,10 @@
               class="eyeBtn far fa-eye"
               onclick="showPassword(`repeatPassword`,this)"
             ></i>
+            <div>
+              <i class="fas fa-exclamation-circle failure-icon"></i>
+              <i class="far fa-check-circle success-icon"></i>
+            </div>
           </div>
           <button type="button" class="recovery" id="recovery"></button>
 
@@ -133,5 +143,6 @@
       </div>
     </footer>
     <script src="../js/passwordShow.js"></script>
+    <script src="../js/validators/recoveryPassword.js"></script>
   </body>
 </html>
