--- a/pages/auth.html
+++ b/pages/auth.html
@@ -455,5 +455,6 @@
       </div>
     </footer>
     <script src="../js/app.js"></script>
+    <script src="../js/validators/authorizationValidation.js"></script>
   </body>
 </html>
