--- a/pages/authorization.html
+++ b/pages/authorization.html
@@ -52,6 +52,7 @@
           </div>
           <div class="msg-wrapper">
             <label for="pass">პაროლი</label>
+            <div class="email-msg sb4">სცადეთ სხვა პაროლი</div>
           </div>
           <div class="input-icons">
             <input
@@ -67,6 +68,10 @@
               class="eyeBtn far fa-eye"
               onclick="showPassword(`id_password`,this)"
             ></i>
+            <div>
+              <i class="fas fa-exclamation-circle failure-icon"></i>
+              <i class="far fa-check-circle success-icon"></i>
+            </div>
           </div>
           <div class="restore-wrapper">
             <div class="divSymmetry">
@@ -98,7 +103,7 @@
           <h3>პაროლის აღდგენა</h3>
           <div class="msg-wrapper">
             <label for="pass">ი-მეილი</label>
-            <div class="email-msg sb4">სცადეთ სხვა იმეილი</div>
+            <div class="email-msg sb4">სცადეთ სხვა მეილი</div>
           </div>
           <div>
             <div class="input-icons">
@@ -170,5 +175,6 @@
       </div>
     </footer>
     <script src="../js/app.js"></script>
+    <script src="../js/validators/authorizationValidation.js"></script>
   </body>
 </html>
